Fix top spacing of top stories titles

--- a/common/app/assets/stylesheets/module/facia/_fromage.scss
+++ b/common/app/assets/stylesheets/module/facia/_fromage.scss
@@ -25,6 +25,8 @@
     }
     .item__title {
         @include fs-headline(2, $size-only: true);
+        padding-top: 0;
+
         @include rem((
             margin-bottom: $gs-baseline + 2px
         ));
@@ -318,10 +320,11 @@
 .fromage--imageadjust-highlight {
     .item__title {
         @include rem((
-            margin-top: $gs-baseline/3
+            padding-top: $gs-baseline/3
         ));
         @include mq(tablet) {
             @include fs-headline(5, true);
+            padding-top: 0;
         }
         @include mq(desktop) {
             @include fs-headline(6, true);
